@@ -10,6 +10,7 @@ import static iped.properties.ExtraProperties.UFED_ID;
 import static iped.properties.ExtraProperties.UFED_META_PREFIX;
 import static iped.properties.ExtraProperties.UFED_SOURCE_MODELS;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -63,8 +64,10 @@ public class InstantMessageHandler extends BaseModelHandler<InstantMessage> {
             metadata.set(PARENT_VIEW_POSITION, model.getAnchorId());
         }
 
-        if (!model.getAttachments().isEmpty()) {
-            metadata.set(MESSAGE_ATTACHMENT_COUNT, Integer.toString(model.getAttachments().size()));
+        // own + forwarded embedded attachments, without duplicates
+        List<Attachment> allAttachments = model.getAllAttachments();
+        if (!allAttachments.isEmpty()) {
+            metadata.set(MESSAGE_ATTACHMENT_COUNT, Integer.toString(allAttachments.size()));
         }
 
         // Message -> Direction
@@ -124,27 +127,30 @@ public class InstantMessageHandler extends BaseModelHandler<InstantMessage> {
             }
         }
 
-        model.getExtraData().getMessageLabels().forEach(l -> {
-            metadata.add(UFED_META_PREFIX + "Label", l.getLabel());
-        });
+        // labels of the message itself only in "ufed:Label", without duplicates
+        for (String label : model.getOwnLabels()) {
+            metadata.add(UFED_META_PREFIX + "Label", label);
+        }
 
         model.getExtraData().getForwardedMessage().ifPresent(fw -> {
             if (fw.getOriginalSender() != null) {
                 new PartyHandler(fw.getOriginalSender(), model.getSource())
                     .fillMetadata(UFED_META_PREFIX + "Forwarded:originalSender", metadata);
             }
-            metadata.add(UFED_META_PREFIX + "Label", fw.getLabel());
 
             fw.getFields().forEach((key, value) -> {
-                fillFieldMetadata("Forwarded:" + key, prefix, metadata, Set.of("Label"));
+                if (!"Label".equals(key)) { // not written (see InstantMessage.getOwnLabels())
+                    fillFieldMetadata("Forwarded:" + key, value, metadata, Collections.emptySet());
+                }
             });
         });
 
         model.getExtraData().getReplyMessage().ifPresent(replied -> {
-            metadata.add(UFED_META_PREFIX + "Label", replied.getLabel());
 
             replied.getFields().forEach((key, value) -> {
-                fillFieldMetadata("Reply:" + key, prefix, metadata, Set.of("Label"));
+                if (!"Label".equals(key)) { // not written (see InstantMessage.getOwnLabels())
+                    fillFieldMetadata("Reply:" + key, value, metadata, Collections.emptySet());
+                }
             });
 
             if (replied.getInstantMessage() != null) {
@@ -153,12 +159,32 @@ public class InstantMessageHandler extends BaseModelHandler<InstantMessage> {
         });
 
         model.getExtraData().getQuotedMessage().ifPresent(quoted -> {
-            String type = StringUtils.firstNonBlank(quoted.getLabel(), "Quoted");
+            // PA 10.10+ does not put "Label" inside QuotedMessageData anymore
+            String type = quoted.getLabel();
+            if (StringUtils.isBlank(type)) {
+                type = model.hasLabel("Reply") ? "Reply" : model.hasLabel("Forwarded") ? "Forwarded" : "Quoted";
+            }
+            final String quotedType = type;
 
             quoted.getFields().forEach((key, value) -> {
-                fillFieldMetadata(type + ":" + key, prefix, metadata, Set.of("Label"));
+                if (!"Label".equals(key)) { // not written (see InstantMessage.getOwnLabels())
+                    fillFieldMetadata(quotedType + ":" + key, value, metadata, Collections.emptySet());
+                }
             });
         });
+
+        // labels of the quoted message (e.g. replying a forwarded message), in an explicit key,
+        // since this message itself is not forwarded
+        if (model.isReplyMessage()) {
+            InstantMessage quotedMessage = model.findReplyMessage(model.getChat());
+            if (quotedMessage != null) {
+                for (String label : quotedMessage.getOwnLabels()) {
+                    if (!"Default".equalsIgnoreCase(label)) {
+                        metadata.add(UFED_META_PREFIX + "Reply:quotedMessageLabel", label);
+                    }
+                }
+            }
+        }
 
         if (model.isSystemMessage()) {
             metadata.set(UFED_META_PREFIX + "isSystemMessage", Boolean.toString(true));
@@ -168,6 +194,14 @@ public class InstantMessageHandler extends BaseModelHandler<InstantMessage> {
             metadata.set(Geographic.LATITUDE, model.getPosition().getLatitude());
             metadata.set(Geographic.LONGITUDE, model.getPosition().getLongitude());
         }
+    }
+
+    private static final Set<String> IGNORED_FIELDS = Set.of("Label", "Labels");
+
+    @Override
+    protected Set<String> getIgnoredFields() {
+        // written by fillMetadata() in "ufed:Label" without duplicates
+        return IGNORED_FIELDS;
     }
 
     @Override
@@ -207,7 +241,7 @@ public class InstantMessageHandler extends BaseModelHandler<InstantMessage> {
             addLinkedItem(linkedItems, ref.getItem(), searcher);
         });
 
-        model.getAttachments().stream().map(Attachment::getReferencedFile).filter(Objects::nonNull).forEach(ref -> {
+        model.getAllAttachments().stream().map(Attachment::getReferencedFile).filter(Objects::nonNull).forEach(ref -> {
             addLinkedItem(linkedItems, ref.getItem(), searcher);
             if (model.isFromPhoneOwner()) {
                 addSharedHash(sharedHashes, ref.getItem());
